Basic services and flyway setup
